v0.0.1/modules/schema/pages/class/LaborelecStandard.adoc
= `LaborelecStandard`
:toclevels: 4


+++Standard published by Laborelec.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:LaborelecStandard`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* *`LaborelecStandard`*


== Slots




[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<standardEdition,`standardEdition`>>
| 0..1
| xref::enumeration/LaborelecStandardEditionKind.adoc[`LaborelecStandardEditionKind`]
| +++Edition of Laborelec standard.+++

| <<standardNumber,`standardNumber`>>
| 0..1
| xref::enumeration/LaborelecStandardKind.adoc[`LaborelecStandardKind`]
| +++Laborelec standard number.+++
|===

'''


//[discrete]
[#standardEdition]
=== `standardEdition`
+++Edition of Laborelec standard.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LaborelecStandard.standardEdition`
| Cardinality
| 0..1
| Type
| xref::enumeration/LaborelecStandardEditionKind.adoc[`LaborelecStandardEditionKind`]


|===

//[discrete]
[#standardNumber]
=== `standardNumber`
+++Laborelec standard number.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LaborelecStandard.standardNumber`
| Cardinality
| 0..1
| Type
| xref::enumeration/LaborelecStandardKind.adoc[`LaborelecStandardKind`]


|===


